Squash merge branch 18-release into master